<resources>
    <string name="app_name">Reciipiie</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="hey">👋 </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text_2">Discover tasty and healthy receipt</string>
    <string name="search_a_recipe">Search any recipe</string>
    <string name="popular_recipes">Popular Recipes</string>
    <string name="all_recipes">All Recipes</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="see_more">See more</string>
    <string name="see_less">See less</string>
    <string name="equipments">Equipments</string>
    <string name="quick_summary">Quick Summary</string>
    <string name="get_ingredients">Get Ingredients</string>
    <string name="get_full_recipe">Get Full Recipe</string>
    <string name="get_similar_recipe">Get Similar Recipe</string>
    <string name="full_recipe">Full Recipe</string>
    <string name="nutrition">Nutrition</string>
    <string name="continue_with_google">Continue with google</string>
</resources>