<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_10sdp"
    android:orientation="vertical"
    tools:context=".screens.HomeFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/textColor"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sdp"
            android:text="@string/hey"/>
        <TextView
            android:id="@+id/userName"
            android:textColor="@color/textColor"
            android:layout_width="wrap_content"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_15sdp"
            android:text="Hey User name"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_9sdp"
        android:layout_marginStart="@dimen/_5sdp"
        android:text="@string/welcome_text_2"
        android:textColor="@color/inactiveColor"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/search"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/unique_round_background"
        android:orientation="horizontal"
        android:padding="@dimen/_12sdp">

        <ImageView
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:layout_gravity="center"
            android:background="@drawable/search"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/search_a_recipe"
            android:textColor="@color/inactiveColor"
            android:textSize="@dimen/_12sdp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/parentRecyclerView"
            android:visibility="invisible"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/homeLoading"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            app:lottie_speed="2"
            android:layout_gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/loading" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
