<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".RecipeDetailActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_300sdp">



                <ImageView
                    android:id="@+id/detailRecipeImage"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sdp"
                    android:background="@color/primary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sdp"
                    android:background="@drawable/black_gradient"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:scaleType="centerCrop"
                    app:layout_constraintHorizontal_bias="1.0"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <TextView
                    android:id="@+id/recipeName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Recipe Name"
                    android:layout_margin="@dimen/_10sdp"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:background="@drawable/saved"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/recipeType"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:background="@drawable/veg_icon"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_margin="@dimen/_5sdp"
                    app:cardCornerRadius="@dimen/_25sdp"
                    android:background="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:background="@color/white"
                        android:gravity="center"
                        android:layout_height="match_parent">
                        <ImageView
                            android:id="@+id/recipeSave"
                            android:layout_width="@dimen/_25sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_gravity="center"
                            android:contentDescription="@string/app_name"
                            android:background="@drawable/fav_not_save" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:baselineAligned="false"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/unique_round_border"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Ready in"
                        android:textColor="@color/inactiveColor"
                        android:textSize="@dimen/_9sdp"/>
                    <TextView
                        android:id="@+id/clickedRecipeTime"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:text="35 min"
                        android:textColor="@color/primary"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/_5sdp"
                        android:textSize="@dimen/_15sdp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/unique_round_border"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Servings"
                        android:textColor="@color/inactiveColor"
                        android:textSize="@dimen/_9sdp"/>
                    <TextView
                        android:id="@+id/clickedRecipeServing"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textColor="@color/primary"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/_5sdp"
                        android:textSize="@dimen/_15sdp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_margin="@dimen/_5sdp"
                    android:background="@drawable/unique_round_border"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="Price/serving"
                        android:textColor="@color/inactiveColor"
                        android:textSize="@dimen/_9sdp"/>
                    <TextView
                        android:id="@+id/clickedRecipePrice"
                        android:layout_width="wrap_content"
                        android:layout_gravity="center"
                        android:layout_height="wrap_content"
                        android:text="140"
                        android:textColor="@color/primary"
                        android:textStyle="bold"
                        android:layout_margin="@dimen/_5sdp"
                        android:textSize="@dimen/_15sdp"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/ingredients"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_13sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/indredientRecyclerView"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/instructions"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_13sdp" />


                <at.blogc.android.views.ExpandableTextView
                    android:id="@+id/clickedRecipeInstructions"
                    android:layout_width="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:text="Recipe Instruction"
                    android:maxLines="4"
                    android:ellipsize="end"
                    app:animation_duration="500"/>

                <TextView
                    android:id="@+id/clickedRecipeInstructionsToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_less"
                    android:layout_gravity="end"
                    android:textColor="@color/inactiveColor"
                    android:textSize="@dimen/_7sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/equipments"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_13sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/equipmentRecyclerView"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/quick_summary"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_13sdp" />


                <at.blogc.android.views.ExpandableTextView
                    android:id="@+id/clickedRecipeSummary"
                    android:layout_width="wrap_content"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_10sdp"
                    android:layout_height="wrap_content"
                    android:maxLines="4"
                    android:ellipsize="end"
                    app:animation_duration="500"/>

                <TextView
                    android:id="@+id/clickedRecipeSummaryToggle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_less"
                    android:layout_gravity="end"
                    android:textColor="@color/inactiveColor"
                    android:textSize="@dimen/_7sdp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10sdp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/nutrition"
                    android:paddingBottom="@dimen/_10sdp"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/_13sdp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/nutritionRecyclerView"/>
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>